# Flwing

./: Cargo.toml  README.md
_AGENTS_BRAIN/session/s1/: s1---Finalizing Flwing Graphics Editor.md  task.md
docs/: flw_format_spec.md
src/: app.rs  main.rs
src/core/: document.rs  effects.rs  gradient.rs  mod.rs  path.rs  shape.rs  types.rs
src/format/: flw.rs  mod.rs
src/i18n/: locale.rs  mod.rs
src/renderer/: canvas.rs
src/text/: font_manager.rs  mod.rs  outline.rs  shaping.rs
src/trace/: image_trace.rs  mod.rs
src/ui/: layers.rs  menu.rs  mod.rs  properties.rs  toolbar.rs
